dnl Process this file with autoconf to produce a configure script.
AC_INIT(asdbget.c)
AM_INIT_AUTOMAKE(asdbget,0.2)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(5250,tn5250_settransmap)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h getopt.h termios.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(socket strdup strerror getopt_long)

dnl *
dnl * Figure out the data directory of the package so we can put a valid DTD
dnl * reference in the XML.
dnl *
eval DATADIR="$datadir"
eval DATADIR="$DATADIR"
eval DATADIR="`echo "$DATADIR" |sed 's%^NONE%/usr/local%'`"
AC_DEFINE_UNQUOTED(DATADIR,"$DATADIR")

AC_OUTPUT(Makefile)
