dnl Process this file with autoconf to produce a configure script.
AC_INIT(asdbget.c)
AM_INIT_AUTOMAKE(asdbget,0.3)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_PATH_PROG(TN5250_CONFIG,tn5250-config,no)
if test x$TN5250_CONFIG != xno
then
  OLD_CFLAGS="$CFLAGS"
  OLD_LIBS="$LIBS"
  AC_MSG_CHECKING(for -l5250 C flags)
  TN5250_CFLAGS="`$TN5250_CONFIG --cflags`"
  CFLAGS="$CFLAGS $TN5250_CFLAGS"
  AC_MSG_RESULT($TN5250_CFLAGS)
  AC_MSG_CHECKING(for -l5250 ld flags)
  TN5250_LIBS="`$TN5250_CONFIG --libs`"
  LIBS="$LIBS $TN5250_LIBS"
  AC_MSG_RESULT($TN5250_LIBS)

  AC_CHECK_LIB(5250,tn5250_char_map_new)
  if test x$ac_cv_lib_5250_tn5250_char_map_new = xno
  then
    AC_MSG_WARN([** lib5250 not new enough to support translation maps **])
    AC_MSG_WARN([** translation maps (-m option) will not be available **])
    CFLAGS="$OLD_CFLAGS"
    LIBS="$OLD_LIBS"
  fi
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h getopt.h termios.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(socket strdup strerror getopt_long)

dnl *
dnl * Figure out the data directory of the package so we can put a valid DTD
dnl * reference in the XML.
dnl *
eval DATADIR="$datadir"
eval DATADIR="$DATADIR"
eval DATADIR="`echo "$DATADIR" |sed 's%^NONE%/usr/local%'`"
AC_DEFINE_UNQUOTED(DATADIR,"$DATADIR")

AC_OUTPUT(Makefile)
